--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -30,6 +30,18 @@ table input[type="text"]:focus, table input[type="number"]:focus, table input[ty
     box-shadow: 0px 0px 10px var(--orange);
     transition: box-shadow 0.5s;
 }
+
+table textarea{
+    resize: none;
+    border:2px solid var(--orange);
+    transition: box-shadow 0.5s;
+}
+
+table textarea:focus{
+    outline: none;
+    box-shadow: 0px 0px 5px var(--orange);
+}
+
 input[type="submit"]{
     font-size:2rem;
     width:35vw;
